--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,10 +1,10 @@
 Changelog
 =========
 
-0.2 (unreleased)
+0.2 (2012-03-21)
 ----------------
 
-- Nothing changed yet.
+- Bugfix. Don't break when a dexterity object is one of the parents. [jcbrand]
 
 
 0.1 (2011-09-13)
